--- a/Circle03/philo_mac/Makefile
+++ b/Circle03/philo_mac/Makefile
@@ -6,7 +6,7 @@
 #    By: junghan <junghan@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/07 17:24:45 by junghan           #+#    #+#              #
-#    Updated: 2021/07/08 17:38:19 by junghan          ###   ########.fr        #
+#    Updated: 2021/07/08 12:07:01 by junghan          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ OBJS = $(SRCS:.c=.o)
 
 CC = gcc
 
-CFLAFS = -Wall -Wextra -Werror -I. -fsanitize=address
+CFLAFS = -Wall -Wextra -Werror -I.
 
 RM = rm -f
 
