--- a/Circle02/so_long/Makefile
+++ b/Circle02/so_long/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: junghan <junghan@student.42seoul.kr>       +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/10/11 10:48:26 by junghan           #+#    #+#              #
+#    Updated: 2021/10/11 10:48:29 by junghan          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = so_long
 
 BONUS = so_long_bonus
