--- a/Circle05/ft_containers/.vscode/settings.json
+++ b/Circle05/ft_containers/.vscode/settings.json
@@ -2,6 +2,16 @@
     "files.associations": {
         "iterator": "cpp",
         "queue": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "vector": "cpp",
+        "memory": "cpp",
+        "iostream": "cpp"
     }
 }
