--- a/Circle05/ft_containers/.vscode/settings.json
+++ b/Circle05/ft_containers/.vscode/settings.json
@@ -67,6 +67,8 @@
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "unordered_map": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "__memory": "cpp",
+        "memory_resource": "cpp"
     }
 }
