--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "memory_resource": "cpp",
-        "map": "cpp"
-    }
+        "map": "cpp",
+        "queue": "cpp"
+    },
 }
